[package]
name = "udsaudio"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
rodio = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "full", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
